# docs/swagger.json
@@ -164,6 +164,75 @@
                 }
             }
         },
+        "/api/v1/merchant/payment": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "订单号",
+                        "name": "order_no",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseAny"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/merchant/payment/orders": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer {ClientID}:{ClientSecret}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payment.CreateOrderRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseAny"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/oauth/callback": {
             "post": {
                 "produces": [
@@ -362,6 +431,7 @@
                         "success",
                         "pending",
                         "failed",
+                        "expired",
                         "disputing",
                         "refund",
                         "refunded"
@@ -375,6 +445,26 @@
                         "transfer",
                         "community"
                     ]
+                }
+            }
+        },
+        "payment.CreateOrderRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "order_name"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "order_name": {
+                    "type": "string",
+                    "maxLength": 64
+                },
+                "remark": {
+                    "type": "string",
+                    "maxLength": 255
                 }
             }
         },
